welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {


def vuBiscuit():Boolean ={
var B :Int=0;
if (estSurBiscuit){B=B+1}
for (x<-1 to 7){avance();}
for (x<-1 to 7){recule();}
if(B=2){return true;}else{return false;}
}
}

